feat: Add search movie

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:name=".ui.main.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.TMDB.Starting"
-            android:windowSoftInputMode="stateAlwaysVisible|adjustPan">
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
